# fees

./: .gitignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  rustfmt.toml  setup.sh
.github/: .env  CODEOWNERS
.github/workflows/: build-programs.yml  build-rust-client.yml  main.yml  test-js-client.yml  test-programs.yml  test-rust-client.yml
clients/js/: .eslintrc.cjs  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.declarations.json  tsconfig.json
clients/js/src/: plugin.ts
clients/js/test/: _common.ts  _setup.ts  collect.test.ts  collect.ts  collectTokens.test.ts  create.test.ts
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/src/: lib.rs
program/: Cargo.toml  README.md  idl.json
program/idl/: fees_program_program.json
program/src/: error.rs  lib.rs
program/src/instructions/: collect.rs  collect_tokens.rs  mod.rs
program/src/state/: mod.rs
scripts/: generate-clients.cjs  generate-clients.mjs  generate-idls.cjs  start-validator.mjs  utils.mjs  validator.cjs
scripts/client/: test-js.mjs  test-rust.mjs
scripts/program/: build.mjs  dump.mjs  format.mjs  lint.mjs  test.mjs
