[package]
name = "fees-program"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "HNs9y7yocDV3FU3s5C21mz4MTkzcoScYqxNesjWzcHk2"
program-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
solana-program = "<1.18"
