[package]
name = "fees-program"
version = "0.2.0"
edition = "2021"
readme = "./README.md"
license-file = "../LICENSE"
publish = false

[package.metadata.solana]
program-id = "TFEEgwDP6nn1s8mMX2tTNPPz8j2VomkphLUmyxKm17A"
program-dependencies = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["default"] }
solana-program = "<1.18"
tensor-toolbox = { version = "0.8.1", features = ["token-2022"] }

[lints.rust]
unused_must_use = "deny"
